[gd_scene load_steps=6 format=2]

[ext_resource path="res://utility/draggy.gd" type="Script" id=1]
[ext_resource path="res://resources/SFX/robot talking 5.wav" type="AudioStream" id=2]
[ext_resource path="res://resources/SFX/sci fi click 4.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("GrabSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -40.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GrabSound:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -8.0 ]
}

[node name="Draggy" type="DampedSpringJoint2D"]
node_a = NodePath("GrabbyPart")
bias = 0.204
disable_collision = false
length = 1.0
stiffness = 22.9
damping = 0.15
script = ExtResource( 1 )

[node name="TractorBeam" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0.1 )
default_color = Color( 0.698039, 0.0431373, 0.717647, 0.596078 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="GrabbyPart" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabbyPart"]

[node name="MouseDetector" type="ColorRect" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
color = Color( 0.0705882, 0.0666667, 0.482353, 0 )

[node name="GrabSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -8.0
pitch_scale = 0.55

[node name="LoseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -4.0
pitch_scale = 0.87

[node name="GrabStart" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="gui_input" from="MouseDetector" to="." method="_on_MouseDetector_gui_input"]
[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_MouseDetector_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetector" to="." method="_on_MouseDetector_mouse_exited"]
